# PyMCNP

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  COPYRIGHT  LICENSE  MCNPtools-parse-ptrac  README.md  create_input_moon_FAN_F8.py  gammaSpect.py  help.py  help.txt  mcnpio.py  pulsed_source_analysis.py  pymcnp-save.txt  pyproject.toml  read-F8-plot.py  setup.py  temp.txt  test.py
.github/workflows/: make-release.yml  publish-to-pypi.yaml  python_tests.yml  pythonpackage.yml
docs/: README.md  inp.bnf
docs/source/: cli.md  cli.rst  conf.py  contributing.md  examples.md  functions.rst  index.md  index.rst  installation.md  installation.rst  modules.rst  pymcnp-cli.rst  pymcnp-inp.rst  pymcnp-ptrac.rst  pymcnp-utils.rst  pymcnp.cli.rst  pymcnp.files.inp.rst  pymcnp.files.mctal.rst  pymcnp.files.meshtal.rst  pymcnp.files.ptrac.rst  pymcnp.files.rst  pymcnp.gui.rst  pymcnp.md  pymcnp.rst  roadmap.md  supported-elements.rst
examples/: cli_check.py  cli_convert.py  cli_plot.py  cli_run.py  cli_visualize.py  create_cell.py  create_cell_build.py  create_cell_init.py  create_inp.py  create_inp_build.py  create_inp_init.py  create_material.py  create_material_build.py  create_material_formula.py  create_material_init.py  create_surface.py  create_surface_build.py  create_surface_init.py  do_check.py  do_convert.py  do_parameter_scan.py  do_plot.py  do_run.py  do_visualize.py  example_0.py  example_00.inp  example_01.inp  example_02.inp  example_02.ptrac  example_03.outp  example_04.outp  example_04.ptrac  example_05.inp  example_box.py  example_create_material_card.py  example_create_material_cards.py  example_draw.py  example_read_F1F8out.py  example_read_energy_and_time.py  example_read_fmesh-time-energy.py  (+30 more)
examples/cadquery_files/: example_0_output.py
examples/inp_files/: example_0_input.inp
files/: IsoSrc2_alumBlock.i  IsoSrc4_polySlab.i  isoSrc1_soilCore.i  ptrac.ptrac
files/inp/: example_00.inp  example_01.inp  example_03.inp  example_04.inp  invalid_01.inp  invalid_02.inp  todo_04.inp  todo_30.inp  todo_38.inp  todo_40.inp  todo_41.inp  valid_00.inp  valid_01.inp  valid_02.inp  valid_03.inp  valid_05.inp  valid_06.inp  valid_07.inp  valid_08.inp  valid_09.inp  valid_10.inp  valid_11.inp  valid_12.inp  valid_13.inp  valid_14.inp  valid_15.inp  valid_16.inp  valid_17.inp  valid_18.inp  valid_19.inp  valid_20.inp  valid_21.inp  valid_22.inp  valid_23.inp  valid_24.inp  valid_25.inp  valid_26.inp  valid_27.inp  valid_28.inp  valid_29.inp  (+6 more)
files/meshtal/: invalid_05.meshtal  valid_38.meshtal  valid_39.meshtal  valid_40.meshtal
files/outp/: todo_04.outp  valid_00.outp  valid_01.outp  valid_02.outp  valid_03.outp  valid_05.outp  valid_06.outp  valid_07.outp  valid_08.outp  valid_09.outp  valid_10.outp  valid_11.outp  valid_12.outp  valid_13.outp  valid_14.outp  valid_15.outp  valid_16.outp  valid_17.outp  valid_18.outp  valid_19.outp  valid_20.outp  valid_21.outp  valid_22.outp  valid_23.outp  valid_24.outp  valid_25.outp  valid_26.outp  valid_27.outp  valid_28.outp  valid_29.outp  valid_30.outp  valid_31.outp  valid_32.outp  valid_33.outp  valid_34.outp  valid_35.outp  valid_36.outp  valid_37.outp
files/ptrac/: example_00.ptrac  example_02.ptrac  example_03.ptrac  todo_03.ptrac  todo_08.ptrac  todo_14.ptrac  todo_18.ptrac  todo_24.ptrac  todo_25.ptrac  todo_26.ptrac  todo_28.ptrac  todo_29.ptrac  valid_00.ptrac  valid_01.ptrac  valid_09.ptrac  valid_10.ptrac  valid_15.ptrac  valid_16.ptrac  valid_21.ptrac  valid_22.ptrac  valid_23.ptrac  valid_27.ptrac  valid_31.ptrac  valid_35.ptrac  valid_37.ptrac
mcnp_runs/: MCNP-F1-sample.i  png_test.i  test_delete.i
mcnphelper/: mcnpwrite.py
mcnptools/: __init__.py  build_geometry.py  create_input_moon_FAN.py  create_input_moon_FAN_F8.py  gammaSpect.py  geometryGUI.py  mcnpio.py  mcnpwrite.py  parse_ptrac.py  pulsed_source_analysis.py  read-F8-plot.py  test.py  transformations.py
mcnptools/test_output_files/: geom_gui.i
scripts/: _data.py  build_cell_options.py  build_data.py  build_surfaces.py  build_test_cell_options.py  inp_code.py  inp_data.py  inp_tests.py
src/demo/: main.py
src/mcnptools/: __init__.py  geometryGUI.py  input_line.py  mcnpio.py  mcnprun.py  mcnpwrite.py  parse_ptrac.py  transformations.py  version.py
src/pymcnp/: Check.py  Convert.py  Inp.py  InpBuilder.py  Meshtal.py  MeshtalFilter.py  MeshtalFiltered.py  MeshtalProcessed.py  MeshtalProcessor.py  Outp.py  Plot.py  Ptrac.py  PtracFilter.py  PtracFiltered.py  PtracProcessed.py  PtracProcessor.py  Run.py  Visualize.py  __init__.py  _code.py  _data.py  _doer.py  _elements.py  _file.py  _help.py  _symbol.py  _text.py  functions.py  help.py  main.py  mcnp.py  version.py
test/: C_block_API_ptrac_filter_V2.i  lwr-run-F1.sh
tests/: _config.py  _strategies.py  _test_cell.py  _test_datum.py  _test_surface.py  _utils.py  classes.py  coneSrc1_siliCore.i  consts.py  ptrac_testdata.txt  strategies.py  test_cell.py  test_comment.py  test_data.py  test_equations.i  test_inp.py  test_input.py  test_macrobodies.i  test_material.py  test_modify.py  test_new.py  test_ptrac.py  test_surface.py  test_types.py
tests/data/: test-input-detector-formatted.i  test-input-detector.i
tests/inp/: test__card.py  test__option.py  test_card.py  test_cell.py  test_comment.py  test_data.py  test_surface.py
tests/inp_files/: IsoSrc3_carBlock.i  coneSrc1_siliCore.i  coneSrc2_polySlab.i
tests/test_pymcnp/: test_Check.py  test_Convert.py  test_Inp.py  test_Meshtal.py  test_MeshtalFilter.py  test_MeshtalProcessor.py  test_Outp.py  test_Plot.py  test_Ptrac.py  test_PtracFilter.py  test_PtracProcessor.py  test_Run.py  test_Visualize.py  test_main.py
(+4685 files in other folders)
